# passphoto

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Bounds.h  Config.cpp  Config.h  ErrorTypes.h  FaceCropper.cpp  FaceCropper.h  FaceDetector.cpp  FaceDetector.h  ProgramOutput.cpp  ProgramOutput.h  Version.h.in
